--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <head>
     <meta charset="utf-8">
     <title> hamza's site </title>
+   <link rel="stylesheet" href="../CSS/styles.css" type="text/css">
 </head>
 <body><section></section>
 <center> <h1>Hamza Ayub's future plans</h1></center>
